<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".Agregar">

    <Button
        android:id="@+id/btnIrAElegir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/GrisButtons"
        android:text="@string/volver"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvTitulo"
        />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />


    <EditText
        android:id="@+id/nProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Agregar nombre"
        android:hint="@string/agregar_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/campos"
        android:textColorHint="@color/TextCamposGris"
        android:textStyle="bold"
        />

        <EditText
        android:id="@+id/aDescripcion"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:text="Agregar descripcion"
        android:hint="@string/agregar_descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nProducto"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:background="@drawable/campos"
        android:textColorHint="@color/TextCamposGris"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/aImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aDescripcion"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/TextCamposGris"
        />

    <Button
        android:id="@+id/btnPublicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicar"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/RedButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>